feat: 그룹 챌린지 3일 기록 API
