# src/main/java/com/goolbitg/api/v1/service/ChallengeGroupServiceImpl.java
@@ -1,15 +1,18 @@
 package com.goolbitg.api.v1.service;
 
 import java.time.LocalDate;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
 
 import com.goolbitg.api.model.ChallengeGroupDto;
@@ -17,6 +20,7 @@ import com.goolbitg.api.model.ChallengeGroupRankDto;
 import com.goolbitg.api.model.ChallengeGroupRankDtoRankInner;
 import com.goolbitg.api.model.ChallengeGroupRecordDto;
 import com.goolbitg.api.model.ChallengeGroupStatDto;
+import com.goolbitg.api.model.ChallengeGroupTrippleDto;
 import com.goolbitg.api.model.ChallengeRecordStatus;
 import com.goolbitg.api.model.PaginatedChallengeGroupDto;
 import com.goolbitg.api.model.PaginatedChallengeGroupRecordDto;
@@ -53,31 +57,22 @@ public class ChallengeGroupServiceImpl implements ChallengeGroupService {
     @Autowired
     private ChallengeGroupStatsRepository challengeGroupStatsRepository;
     @Autowired
-    private ChallengeGroupEnrollmentRepository ChallengeGroupEnrollmentRepository;
+    private ChallengeGroupEnrollmentRepository challengeGroupEnrollmentRepository;
     @Autowired
     private UserRepository userRepository;
+    @Autowired
+    private TimeService timeService;
 
     @Override
     @Transactional
     public ChallengeGroupRecordDto checkChallengeGroup(String userId, Long groupId) throws Exception {
         validateUser(userId);
         ChallengeGroup group = getOrThrowChallengeGroup(groupId);
-        ChallengeGroupRecordId id = new ChallengeGroupRecordId(groupId, userId, LocalDate.now());
+        ChallengeGroupRecordId id = new ChallengeGroupRecordId(groupId, userId, timeService.getToday());
+        ChallengeGroupRecord record = getOrCreateChallengeGroupRecord(id);
+        record.setStatus(ChallengeRecordStatus.SUCCESS);
+        challengeGroupRecordRepository.save(record);
 
-        Optional<ChallengeGroupRecord> result = challengeGroupRecordRepository.findById(id);
-        ChallengeGroupRecord record;
-        if (result.isPresent()) {
-            record = result.get();
-            record.setStatus(ChallengeRecordStatus.SUCCESS);
-        } else {
-            record = ChallengeGroupRecord.builder()
-                    .userId(userId)
-                    .groupId(groupId)
-                    .date(LocalDate.now())
-                    .status(ChallengeRecordStatus.SUCCESS)
-                    .build();
-            challengeGroupRecordRepository.save(record);
-        }
         ChallengeGroupStatsId statsId = new ChallengeGroupStatsId(groupId, userId);
         ChallengeGroupStats stats = challengeGroupStatsRepository.findById(statsId)
                 .orElseThrow(() -> ChallengeException.notEnrolled(groupId));
@@ -145,7 +140,7 @@ public class ChallengeGroupServiceImpl implements ChallengeGroupService {
         validateUser(userId);
         ChallengeGroup group = getOrThrowChallengeGroup(groupId);
         ChallengeGroupEnrollmentId id = new ChallengeGroupEnrollmentId(group.getId(), userId);
-        Optional<ChallengeGroupEnrollment> result = ChallengeGroupEnrollmentRepository.findById(id);
+        Optional<ChallengeGroupEnrollment> result = challengeGroupEnrollmentRepository.findById(id);
 
         ChallengeGroupEnrollment enrollment;
         if (result.isPresent()) {
@@ -167,7 +162,7 @@ public class ChallengeGroupServiceImpl implements ChallengeGroupService {
             challengeGroupStatsRepository.save(stats);
         }
         
-        ChallengeGroupEnrollmentRepository.save(enrollment);
+        challengeGroupEnrollmentRepository.save(enrollment);
     }
 
     @Override
@@ -205,24 +200,6 @@ public class ChallengeGroupServiceImpl implements ChallengeGroupService {
         return getChallengeGroupRecordDto(record);
     }
 
-    private ChallengeGroupRecord getOrCreateChallengeGroupRecord(ChallengeGroupRecordId id) {
-        Optional<ChallengeGroupRecord> result = challengeGroupRecordRepository.findById(id);
-        ChallengeGroupRecord record;
-        if (result.isPresent()) {
-            record = result.get();
-            record.setStatus(ChallengeRecordStatus.SUCCESS);
-        } else {
-            record = ChallengeGroupRecord.builder()
-                    .userId(id.userId())
-                    .groupId(id.groupId())
-                    .date(LocalDate.now())
-                    .status(ChallengeRecordStatus.SUCCESS)
-                    .build();
-            challengeGroupRecordRepository.save(record);
-        }
-        return record;
-    }
-
     @Override
     public PaginatedChallengeGroupRecordDto getChallengeGroupRecords(String userId, int page, int size,
             LocalDate date, ChallengeRecordStatus status, Boolean created) throws Exception {
@@ -238,7 +215,7 @@ public class ChallengeGroupServiceImpl implements ChallengeGroupService {
 
     @Override
     public PaginatedChallengeGroupDto getChallengeGroups(String userId, int page, int size, String search,
-            Boolean created) throws Exception {
+            Boolean created, Boolean participating) throws Exception {
         Pageable pageReq = PageRequest.of(page, size);
 
         Page<ChallengeGroup> result;
@@ -254,6 +231,13 @@ public class ChallengeGroupServiceImpl implements ChallengeGroupService {
             } else {
                 result = challengeGroupRepository.findByTitleContainingOrHashtagsContaining(search, search, pageReq);
             }
+        }
+
+        if (participating) {
+            result = new PageImpl<>(result.filter(group -> {
+                ChallengeGroupEnrollmentId id = new ChallengeGroupEnrollmentId(group.getId(), userId);
+                return challengeGroupEnrollmentRepository.findById(id).isPresent();
+            }).toList(), pageReq, result.getTotalElements());
         }
 
         PaginatedChallengeGroupDto dto = getDto(result);
@@ -305,6 +289,94 @@ public class ChallengeGroupServiceImpl implements ChallengeGroupService {
             group.setPassword(challengeGroupDto.getPassword());
         if (challengeGroupDto.getHashtags() != null)
             group.setHashtags(String.join(",", challengeGroupDto.getHashtags()));
+    }
+
+    @Override
+    @Transactional
+    public ChallengeGroupTrippleDto getTripple(String userId, long groupId) throws Exception {
+        validateUser(userId);
+        getOrThrowChallengeGroup(groupId);
+
+        ChallengeGroupRecordId id = new ChallengeGroupRecordId(groupId, userId, timeService.getToday());
+        ChallengeGroupRecord record = getOrCreateChallengeGroupRecord(id);
+        LocalDate location = record.getDate().minusDays(record.getLocation() - 1);
+        List<ChallengeGroupRecord> records = new ArrayList<>();
+        for (int i = 0; i < 3; i++) {
+            ChallengeGroupRecordId curId = new ChallengeGroupRecordId(groupId, userId, location);
+            ChallengeGroupRecord curRecord = getOrCreateChallengeGroupRecord(curId);
+            challengeGroupRecordRepository.save(curRecord);
+            location = location.plusDays(1);
+            records.add(curRecord);
+        }
+
+        ChallengeGroupStatsId statsId = new ChallengeGroupStatsId(groupId, userId);
+        ChallengeGroupStats stats = challengeGroupStatsRepository.findById(statsId)
+                .orElseThrow();
+
+        ChallengeGroupTrippleDto dto = new ChallengeGroupTrippleDto();
+        dto.setDuration(stats.getDuration());
+        dto.setCheck1(records.get(0).getStatus());
+        dto.setCheck2(records.get(1).getStatus());
+        dto.setCheck3(records.get(2).getStatus());
+        dto.setLocation(record.getLocation());
+
+        return dto;
+    }
+
+    private ChallengeGroupRecord getOrCreateChallengeGroupRecord(ChallengeGroupRecordId id) {
+        Optional<ChallengeGroupRecord> result = challengeGroupRecordRepository.findById(id);
+        ChallengeGroupRecord record;
+        if (result.isEmpty()) {
+            ChallengeGroupRecordId prevId = new ChallengeGroupRecordId(id.groupId(), id.userId(), id.date().minusDays(1));
+            Optional<ChallengeGroupRecord> prevResult = challengeGroupRecordRepository.findById(prevId);
+            int nowLocation = 1;
+            if (prevResult.isPresent()) {
+                nowLocation = (prevResult.get().getLocation() % 3) + 1;
+            }
+            record = ChallengeGroupRecord.builder()
+                .userId(id.userId())
+                .groupId(id.groupId())
+                .date(id.date())
+                .status(ChallengeRecordStatus.WAIT)
+                .location(nowLocation)
+                .build();
+        } else {
+            record = result.get();
+        }
+        return record;
+    }
+
+    @Override
+    @Transactional(propagation = Propagation.REQUIRES_NEW)
+    public void failChallenge(String userId, Long challengeGroupId, LocalDate date) {
+        ChallengeGroupRecordId challengeGroupRecordId = new ChallengeGroupRecordId(challengeGroupId, userId, date);
+        ChallengeGroupStatsId challengeGroupStatsId = new ChallengeGroupStatsId(challengeGroupId, userId);
+        ChallengeGroupRecord todayRecord = challengeGroupRecordRepository.findById(challengeGroupRecordId)
+                .orElseThrow(() -> ChallengeException.challengeRecordNotExist(challengeGroupId));
+        ChallengeGroupStats challengeGroupStats = challengeGroupStatsRepository.findById(challengeGroupStatsId)
+                .orElseThrow(() -> ChallengeException.challengeNotExist(challengeGroupId));
+        if (todayRecord.getStatus().equals(ChallengeRecordStatus.SUCCESS)) {
+            throw ChallengeException.alreadyComplete(challengeGroupId);
+        }
+        todayRecord.fail();
+        for (int i = todayRecord.getLocation() + 1; i <= 3; i++) {
+            challengeGroupRecordId = challengeGroupRecordId.next();
+            ChallengeGroupRecord challengeGroupRecord = challengeGroupRecordRepository.findById(challengeGroupRecordId)
+                    .orElseThrow(() -> ChallengeException.challengeRecordNotExist(challengeGroupId));
+            challengeGroupRecord.fail();
+        }
+        challengeGroupStats.fail();
+    }
+
+    @Override
+    @Transactional
+    public void calculateAllChallengeStat(LocalDate date) {
+        for (ChallengeGroupEnrollment enrollment : challengeGroupEnrollmentRepository.findAll()) {
+            if (enrollment.getStatus().equals(EnrollmentStatus.UNENROLL)) continue;
+            ChallengeGroupStatsId id = new ChallengeGroupStatsId(enrollment.getGroupId(), enrollment.getUserId());
+            ChallengeGroupStats stats = challengeGroupStatsRepository.findById(id).get();
+            stats.increaseDuration();
+        }
     }
 
 }
